Bug 416753. Crashes in GetState(). r=surkov, a=schrep